fixed alignment of navbar

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,9 @@
 .title-fourth{
   animation-delay: .9s;
 }
+.title-fifth{
+  animation-delay:1.2s;
+}
 @keyframes revealText{
   from{
     transform: translateY(20px);
@@ -37,3 +40,44 @@ body{
   font-weight: 500;
   font-style: normal;
 }
+
+/*animation*/
+
+.one {
+  opacity: 0;
+  -webkit-animation: dot 1.3s infinite;
+  -webkit-animation-delay: 0.0s;
+  animation: dot 1.3s infinite;
+  animation-delay: 0.0s;
+}
+
+.two {
+  opacity: 0;
+  -webkit-animation: dot 1.3s infinite;
+  -webkit-animation-delay: 0.2s;
+    animation: dot 1.3s infinite;
+    animation-delay: 0.2s;
+}
+
+.three {
+  opacity: 0;
+  -webkit-animation: dot 1.3s infinite;
+  -webkit-animation-delay: 0.3s;
+   animation: dot 1.3s infinite;
+   animation-delay: 0.3s;
+}
+
+@-webkit-keyframes dot {
+    0% { opacity: 0; }
+   50% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@keyframes dot {
+    0% { opacity: 0; }
+   50% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+
+
